--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -119,7 +119,7 @@
         <activity
             android:name=".main.MainActivity"
             android:launchMode="singleTop"
-            android:configChanges="orientation"
+            android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:screenOrientation="portrait"/>
         <activity
             android:name=".common.GalleryActivity"
@@ -171,7 +171,11 @@
             android:name=".item.PickMemberActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateAlwaysHidden"/>
+        <activity
+            android:name=".item.DidiExpenseActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|locale"
+            android:screenOrientation="portrait"/>
 
         <!--   report part   -->
         <activity
@@ -182,12 +186,12 @@
             android:name=".report.PickManagerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateAlwaysHidden"/>
         <activity
             android:name=".report.PickCCActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateAlwaysHidden"/>
         <activity
             android:name=".report.ApproveReportActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
@@ -237,10 +241,6 @@
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".item.DidiExpenseActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize|locale"
-            android:screenOrientation="portrait"/>
-        <activity
             android:name=".me.EmailActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:screenOrientation="portrait"/>
@@ -287,7 +287,8 @@
         <activity
             android:name=".me.PickProxyActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden"/>
         <activity
             android:name=".me.ProxyScopeActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
@@ -320,7 +321,7 @@
             android:name=".me.ManagerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateAlwaysHidden"/>
         <activity
             android:name=".me.CategoryActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
