--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -390,11 +390,19 @@
 	        android:value="543bf20efd98c544b9002d11">
 	    </meta-data>
 	    
-	    <!-- 推广渠道，Wandoujia之类的 
+	    <!-- 推广渠道 -->
 	    <meta-data
-	        android:name="UMENG_CHANNEL" 
-	        android:value="Wandoujia">
-	    </meta-data>-->
+	        android:name="UMENG_CHANNEL"
+	        android:value="Official">
+	    </meta-data>
+        <!--<meta-data-->
+            <!--android:name="UMENG_CHANNEL"-->
+            <!--android:value="Wandoujia">-->
+        <!--</meta-data>-->
+        <!--<meta-data-->
+            <!--android:name="UMENG_CHANNEL"-->
+            <!--android:value="Yingyongbao">-->
+        <!--</meta-data>-->
 
         <service
             android:name="com.umeng.update.net.DownloadingService"
