--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -384,12 +384,17 @@
 	        android:name="UMENG_APPKEY" 
 	        android:value="543bf20efd98c544b9002d11">
 	    </meta-data>
-	    
-	    <!-- 推广渠道，Wandoujia之类的 
-	    <meta-data
-	        android:name="UMENG_CHANNEL" 
-	        android:value="Wandoujia">
-	    </meta-data>-->
+
+        <!-- 推广渠道 -->
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="Official"/>
+        <!--<meta-data-->
+            <!--android:name="UMENG_CHANNEL"-->
+            <!--android:value="Wandoujia"/>-->
+        <!--<meta-data-->
+            <!--android:name="UMENG_CHANNEL"-->
+            <!--android:value="Yingyongbao"/>-->
 
         <service
             android:name="com.umeng.update.net.DownloadingService"
